@@ -1,0 +1,4 @@
+GDK_PRIORITY_EVENTS
+GDK_PRIORITY_REDRAW
+
+GTK_PRIORITY_RESIZE
